@@ -21,6 +21,7 @@ package org.apache.cassandra.sidecar.cluster;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -51,27 +52,30 @@ public class InstancesConfigImpl implements InstancesConfig
         this.instanceMetadataList = instanceMetadataList;
     }
 
+    @Override
     public List<InstanceMetadata> instances()
     {
         return instanceMetadataList;
     }
 
-    public InstanceMetadata instanceFromId(int id)
+    @Override
+    public InstanceMetadata instanceFromId(int id) throws NoSuchElementException
     {
         InstanceMetadata instanceMetadata = idToInstanceMetadata.get(id);
         if (instanceMetadata == null)
         {
-            throw new IllegalArgumentException("Instance id " + id + " not found");
+            throw new NoSuchElementException("Instance id " + id + " not found");
         }
         return instanceMetadata;
     }
 
-    public InstanceMetadata instanceFromHost(String host)
+    @Override
+    public InstanceMetadata instanceFromHost(String host) throws NoSuchElementException
     {
         InstanceMetadata instanceMetadata = hostToInstanceMetadata.get(host);
         if (instanceMetadata == null)
         {
-            throw new IllegalArgumentException("Instance with host address " + host + " not found");
+            throw new NoSuchElementException("Instance with host address " + host + " not found");
         }
         return instanceMetadata;
     }
